RESOLVED FIXED279794
[iOS] Many layout tests are failing after the fix for rdar://133635866 in UIKit
https://bugs.webkit.org/show_bug.cgi?id=279794
Summary [iOS] Many layout tests are failing after the fix for rdar://133635866 in UIKit
Wenson Hsieh
Reported 2024-09-16 16:53:02 PDT
Attachments
Wenson Hsieh
Comment 1 2024-09-16 17:07:34 PDT
EWS
Comment 2 2024-09-17 13:17:36 PDT
Committed 283793@main (7af7faec853a): <https://commits.webkit.org/283793@main> Reviewed commits have been landed. Closing PR #33731 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.